@@ -16,17 +16,17 @@ AC_DEFUN([AX_LIBTEXTSTYLE_HYPERLINK],
 [
   AC_REQUIRE([gl_LIBTEXTSTYLE_OPTIONAL])
   if test $HAVE_LIBTEXTSTYLE = yes; then
-    AC_CHECK_LIB([textstyle], [styled_ostream_set_hyperlink])
+    AC_CHECK_LIB([textstyle], [styled_ostream_set_hyperlink], [
+      AC_DEFINE([HAVE_TEXTSTYLE_HYPERLINK_SUPPORT], 1,
+                [Defined if libtextstyle has support for terminal hyperlinks])
+    ])
     has_hyper_support=${ac_cv_lib_textstyle_styled_ostream_set_hyperlink}
   else
     dnl If HAVE_LIBTEXTSTYLE is no, then we assume that the gnulib stubs of
     dnl textstyle are available. Those stubs implement the dummy functions
     dnl required and hence we can assume that hyperlink support is available
     has_hyper_support=yes
-  fi
-
-  if test $has_hyper_support = yes; then
-      AC_DEFINE([HAVE_TEXTSTYLE_HYPERLINK_SUPPORT], 1,
-                [Defined if libtextstyle has support for terminal hyperlinks])
+    AC_DEFINE([HAVE_TEXTSTYLE_HYPERLINK_SUPPORT], 2,
+              [Defined if libtextstyle has support for terminal hyperlinks])
   fi
 ])
